# SEA-ME_Instrument-Cluster

./: CAN_speed_Final.ino  README.md  config.txt  qt6->qt5.md  speed_sensor_test.ino
Arduino/: Arduino IDE.lnk  CAN_TEST.ino  continuity.ino  send.ino
Black_Magic/: What_Does_Happen.md
GUI/Practice/: CMakeLists.txt  IconButton.qml  Main.qml  Neon.qml  SettingPage.qml  TimePage.qml  main.cpp  resources.qrc  timeprovider.cpp  timeprovider.h
piracer_examples/: abutton.py  basic_example.py  rc_example.py  streaming  streaming_with_rc.py  video.py
